Working on paper

--- a/paper/cmt.bib
+++ b/paper/cmt.bib
@@ -26,3 +26,55 @@
   journal={arXiv preprint arXiv:2303.10798},
   year={2023}
 }
+
+@article{kramers,
+  title = {Statistics of the Two-Dimensional Ferromagnet. Part I},
+  author = {Kramers, H. A. and Wannier, G. H.},
+  journal = {Phys. Rev.},
+  volume = {60},
+  issue = {3},
+  pages = {252--262},
+  numpages = {0},
+  year = {1941},
+  month = {Aug},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRev.60.252},
+  url = {https://link.aps.org/doi/10.1103/PhysRev.60.252}
+}
+
+@article{bhattacharjee1995fifty,
+  title={Fifty years of the exact solution of the two-dimensional Ising model by Onsager},
+  author={Bhattacharjee, Somendra M and Khare, Avinash},
+  journal={Current science},
+  volume={69},
+  number={10},
+  pages={816--821},
+  year={1995},
+  publisher={JSTOR}
+}
+
+@article{penrose-ising,
+  title = {Ising model on Penrose lattices: Boundary conditions},
+  author = {S\o{}rensen, Erik Schwartz and Jari\ifmmode \acute{c}\else \'{c}\fi{}, Marko V. and Ronchetti, Marco},
+  journal = {Phys. Rev. B},
+  volume = {44},
+  issue = {17},
+  pages = {9271--9282},
+  numpages = {0},
+  year = {1991},
+  month = {Nov},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevB.44.9271},
+  url = {https://link.aps.org/doi/10.1103/PhysRevB.44.9271}
+}
+
+@article{tomita2014finite,
+  title={Finite-size scaling analysis of pseudocritical region in two-dimensional continuous-spin systems},
+  author={Tomita, Yusuke},
+  journal={Physical Review E},
+  volume={90},
+  number={3},
+  pages={032109},
+  year={2014},
+  publisher={APS}
+}
